@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.nzbtv"
        name="NzbTV"
-       version="0.2.5"
+       version="0.2.6"
        provider-name="Popeye, Ckergald">
   <requires>
-    <import addon="xbmc.python" version="2.0"/>
+    <import addon="xbmc.python" version="2.1.0"/>
     <import addon="plugin.video.newznab" version="0.2.4"/>
   </requires>
   <extension point="xbmc.python.pluginsource"
