@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <strings>
     <!-- Label -->
-    <string id="30001">Misc.</string>
     <string id="30010">Prefered newznab site</string>
-    <string id="30011">Hide show</string>
+    <string id="30011">Remote channels.xml</string>
+    <string id="30012">Enable local channels.xml</string>
+    <string id="30013">Path to local channels.xml</string>
+    <string id="30014">Cache time in hours</string>
 </strings>
