@@ -1,2 +1,6 @@
-[B]Newznab 0.2.5[/B]
+[B]NzbTv 0.2.6[/B]
+- Caching
+- Support for local and remote channels.xml
+
+[B]NzbTv 0.2.5[/B]
 - Re-write by popeye
